--- a/PyCitySchool_clean.ipynb
+++ b/PyCitySchool_clean.ipynb
@@ -3337,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "afd1f282",
+   "id": "f1000441",
    "metadata": {},
    "outputs": [
     {
@@ -3482,7 +3482,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8969cd73",
+   "id": "dd1a70d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3499,7 +3499,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6540db65",
+   "id": "3f045156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3516,7 +3516,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "76c6ecfc",
+   "id": "56d9f9cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3533,7 +3533,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5dd5ee95",
+   "id": "f6e2b238",
    "metadata": {},
    "outputs": [
     {
@@ -3639,7 +3639,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1ee4d20c",
+   "id": "c31e6199",
    "metadata": {},
    "outputs": [
     {
@@ -3745,7 +3745,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5e06a50a",
+   "id": "d2ccdd07",
    "metadata": {},
    "outputs": [
     {
@@ -3851,7 +3851,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a1817825",
+   "id": "b5c8f958",
    "metadata": {},
    "outputs": [
     {
@@ -3957,7 +3957,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0d45a2f0",
+   "id": "0325e8ce",
    "metadata": {},
    "outputs": [
     {
@@ -3987,7 +3987,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bff66bd3",
+   "id": "b402207f",
    "metadata": {},
    "outputs": [
     {
@@ -4014,7 +4014,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "fbaa99da",
+   "id": "b8a90861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4026,7 +4026,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c1766e1f",
+   "id": "edcfbb6f",
    "metadata": {},
    "outputs": [
     {
@@ -4364,7 +4364,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a3fa1f7d",
+   "id": "6f6a8a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4383,7 +4383,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e65c8108",
+   "id": "bfe68144",
    "metadata": {},
    "outputs": [
     {
@@ -4409,7 +4409,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "10c0a6b3",
+   "id": "bca2037e",
    "metadata": {},
    "outputs": [
     {
@@ -4528,7 +4528,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0870d4b4",
+   "id": "783048a8",
    "metadata": {},
    "outputs": [
     {
@@ -4650,7 +4650,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e592f13e",
+   "id": "9c08cd83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4662,7 +4662,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "fd0afe65",
+   "id": "c6107d98",
    "metadata": {},
    "outputs": [
     {
@@ -4826,7 +4826,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4432a4cd",
+   "id": "dea0357f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4845,7 +4845,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2a4222f2",
+   "id": "cfb97d6e",
    "metadata": {},
    "outputs": [
     {
@@ -4947,7 +4947,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0b13b5dc",
+   "id": "0a3de742",
    "metadata": {},
    "outputs": [
     {
@@ -5051,8 +5051,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "3941f27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "afbc9041",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "02de49e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bf54de73",
+   "id": "dee6c4f0",
    "metadata": {},
    "outputs": [],
    "source": []
